# kernel1

./: .dockerignore  .gitignore  .travis.yml  CMakeLists.txt  Cargo.toml  Dockerfile  Dockerfile.toolchain  README.md  build.pl  build.rs  deploy-toolchain  run  toolchain.cmake.template  toolchain.template
.cargo/: config.toml
.circleci/: config.yml
src/: cstd.c  cstd.h  cstd.rs  emulator.rs  fb.rs  hw.rs  lib.rs  main.cpp  panic.cpp  panic.h  panic.rs  platform.rs
src/fake_libc/: fake_stdio.c  fake_stdio.h  fake_stdlib.c  fake_stdlib.h  mod.rs  stdio.rs  stdlib.rs
src/hw/: mod.rs  port.rs  serial.rs
src/i686-elf/: boot.s
src/logimpl/: emulated.rs  mod.rs  serial.rs
src/slint/: main.slint
src/surfaces/: mod.rs  vga320x200_256c.rs
src/targets/emulator/: boot.s
src/targets/i686-elf/: boot.s
src/targets/x86_64-elf/: boot.s
targets/emulator/: linker.ld
targets/i686-elf/: linker.ld  target.json
targets/i686-elf/iso/boot/grub/: grub.cfg
targets/x86_64-elf/: linker.ld
targets/x86_64-elf/iso/boot/grub/: grub.cfg
tools/: choose-qemu  mk-toolchain  pack  runq.template
tools/packttf/: Cargo.toml
tools/packttf/src/: main.rs
tools/replaceenv/: Cargo.toml
tools/replaceenv/src/: main.rs
