[package]
name = "rkernel1"
version = "0.0.1"
edition = '2021'
authors = ["Borys Boiko <burbokop@gmail.com>"]

[lib]
crate-type = ["staticlib"]

[dependencies]
critical-section = "1.1.1"
embedded-alloc = "0.5.0"
libc = "0.2.142"
slint = { version = "1.0.1", default-features = false, features = [
    "compat-1-0",
    "libm",
    "log",
    "unsafe-single-threaded",
] }
#mini-backtrace = "0.1.3"

# For emulator
[target.'cfg(any(target_os = "macos", target_os = "linux", target_os = "windows"))'.dependencies]
sdl2-sys = "0.35.2"

[build-dependencies]
slint-build = { version = "1.0.1" }

