[package]
name = "rkernel1"
version = "0.0.1"
edition = '2021'
authors = ["Borys Boiko <burbokop@gmail.com>"]

[lib]
crate-type = ["staticlib"]

[features]
emulator = [ "dep:mini_winclient" ]

[dependencies]
critical-section = "1.1.1"
embedded-alloc = "0.5.0"
slint = { version = "1.0.2", default-features = false, features = [
    "compat-1-0",
    "libm",
    "log",
    "unsafe-single-threaded",
] }
log = { version = "^0.4.17" }

# TODO
# mini-backtrace = "0.1.3"
mini_winclient = { git = "https://github.com/burbokop/mini_winclient.git", optional = true }

[build-dependencies]
slint-build = { version = "1.0.2" }
reqwest = "0.11.18"
tokio = { version = "1", features = ["full"] }
